cabal-version: >=1.10

name: events
version: 0.1.0.0
description: Events handling
license: MIT
author: Remo
maintainer: Remo
copyright: Remo
build-type: Simple

executable events
  main-is: Main.hs
  build-depends:
    base >=4.13 && <4.14,
    hasql,
    servant,
    servant-server,
    servant-to-elm,
    aeson,
    unordered-containers,
    generics-sop,
    elm-syntax,
    haskell-to-elm,
    warp,
    wai,
    text
  other-modules:
    Events.Command,
    Events.Message,
    Events.Server
  default-language: Haskell2010

executable elmgen
  main-is: elmgen/Main.hs
  build-depends:
    base >=4.13 && <4.14,
    hasql,
    servant,
    servant-server,
    servant-to-elm,
    aeson,
    unordered-containers,
    generics-sop,
    elm-syntax,
    haskell-to-elm,
    warp,
    wai,
    text
  other-modules:
    Events.Command,
    Events.Message,
    Events.Server
  default-language: Haskell2010
