cabal-version: >=1.10

name: events
version: 0.1.0.0
description: Events handling
license: MIT
author: Remo
maintainer: Remo
copyright: Remo
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Events.Command,
    Events.Message,
    Events.Server
  build-depends:
    aeson,
    base >=4.13 && <4.14,
    elm-syntax,
    generics-sop,
    haskell-to-elm,
    hasql,
    servant,
    servant-server,
    servant-to-elm,
    text,
    unordered-containers,
    wai,
    warp
  default-language: Haskell2010

executable events
  main-is: Main.hs
  hs-source-dirs: main
  build-depends:
    events,
    base >=4.13 && <4.14
  default-language: Haskell2010

executable elmgen
  main-is: Main.hs
  hs-source-dirs: elmgen
  build-depends:
    base >=4.13 && <4.14,
    directory,
    elm-syntax,
    events,
    filepath,
    generics-sop,
    haskell-to-elm,
    optparse-applicative,
    prettyprinter,
    servant-to-elm,
    text,
    unordered-containers
  default-language: Haskell2010
