cabal-version: >=1.10

name: postgrest-to-elm
version: 0.1.0.0
description: Generate Elm bindings to PostgREST APIs
license: MIT
author: Remo
maintainer: Remo
copyright: Remo
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    PostgrestToElm.DbStructure
  build-depends:
    aeson,
    base >=4.13 && <4.14,
    elm-syntax,
    generics-sop,
    text
  default-language: Haskell2010

executable postgrest-to-elm
  main-is: Main.hs
  hs-source-dirs: main
  build-depends:
    postgrest-to-elm,
    base >=4.13 && <4.14
  default-language: Haskell2010
